# ghidra-mcp

./: .mcp.json  CHANGELOG.md  README.md  bridge_mcp_ghidra.py  ghidra_mcp_cli.py  mcp-config.json  pyproject.toml
tests/unit/: test_project_consistency.py
